# dsa110-contimg

./: .codacy.yml  .coverage  .cursor  .cursorignore  .cursorrules  .cursorrules.emoji_backup_20251129_135440.emoji_backup_20251129_140923.emoji_backup_20251129_141514  .cursorrules.emoji_backup_20251129_135440.emoji_backup_20251129_140923.emoji_backup_20251129_141514.emoji_backup_20251129_141617  .dockerignore  .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml.e2e  .husky  .linear_config.json.example  .nvmrc  .output-suppression-whitelist  .pre-commit-config.yaml  .prettierignore  0834_calibration_diagnosis_--help.json  404.html  =0.29.0  CONVERSION_FEATURE_COMPLETE.md  Dockerfile  Dockerfile.copilot  ENDPOINT_TEST_SUMMARY.txt  MEMORY.md  MEMORY.txt  Makefile  Makefile.emoji_backup_20251129_135440.emoji_backup_20251129_140923.emoji_backup_20251129_141617  README.md  README.md.emoji_backup_20251129_135440.emoji_backup_20251129_140923.emoji_backup_20251129_141514  README.md.emoji_backup_20251129_135440.emoji_backup_20251129_140923.emoji_backup_20251129_141618  README_NEW_ARCHITECTURE.md  REORGANIZATION_PLAN.md  TEST_RESULTS_COMPREHENSIVE.json  URGENT_FIX_CONTROLPAGE.md  WORKFLOW.md  all_pkg_jsons.txt  (+52 more)
archive/reference_pipelines/dsa110_hi-main/: pyproject.toml
backend/: .coverage  .env.development.backup  .env.postgresql  .env.production  .gitignore  API_IMPLEMENTATION_SUMMARY.md  API_IMPLEMENTATION_SUMMARY.md.emoji_backup_20251129_135735.emoji_backup_20251129_141249  API_IMPLEMENTATION_SUMMARY.md.emoji_backup_20251129_135735.emoji_backup_20251129_141249.emoji_backup_20251129_142038  ARCHITECTURE_REFACTORING.md  ASYNC_DECISION.md  ASYNC_MIGRATION_COMPLETE.md  ASYNC_MIGRATION_GUIDE.md  ASYNC_MIGRATION_PLAN.md  BACKEND_STRUCTURE.md.emoji_backup_20251129_135735  BACKEND_STRUCTURE.md.emoji_backup_20251129_135735.emoji_backup_20251129_141249  BACKEND_STRUCTURE.md.emoji_backup_20251129_135735.emoji_backup_20251129_141249.emoji_backup_20251129_142038  ENHANCEMENT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS.md  NEXT_STEPS.md.emoji_backup_20251129_135735  NEXT_STEPS.md.emoji_backup_20251129_135735.emoji_backup_20251129_141250  PHASE1_COMPLETION_SUMMARY.md  PHASE_1A_CHECKLIST.md  PHASE_1A_REVIEW.md  README.md  REORGANIZATION_SUMMARY.md  STRUCTURE_DIAGRAM_README.md  STRUCTURE_DIAGRAM_README.md.emoji_backup_20251129_135735.emoji_backup_20251129_141250  TODO.md  WORK_ROADMAP.md  backend_structure.svg.emoji_backup_20251129_135735  benchmark_results.json  db_pool_benchmark.json  docker-compose.postgresql.yml  dsa110-contimg-complexity-reduction-opportunites-scattered-thoughts.md  generate_structure_diagram.py.emoji_backup_20251129_135735.emoji_backup_20251129_141250.emoji_backup_20251129_141929  implementation_absurd_pipeline_layer.md  pyproject.toml  (+5 more)
backend/benchmarks/: __init__.py  asv.conf.json  run_benchmarks.py
backend/benchmarks/benchmarks/: __init__.py  bench_calibration.py  bench_conversion.py  bench_gpu.py  bench_imaging.py
backend/benchmarks/results/: benchmark_20251202_163233.json  benchmark_20251202_163624.json  latest.json
backend/config/: dsa110-aggressive.lua  dsa110-very-aggressive.lua  ports.yaml
backend/docs/: ARCHITECTURE.md  ASYNC_PERFORMANCE_REPORT.md  CALIBRATION_TABLES_MIGRATION.md  CASA_IMPORT_PATTERN.md  CHANGELOG.md  GETTING_STARTED.md  README.md  database-adapters.md  postgresql-deployment.md  query-batching.md
backend/docs/architecture/: CALIBRATION_DECISION_LOGIC.md  CHECKS_AND_BOUNDARY_CASES.md
backend/docs/ops/: absurd-service-activation.md  streaming-pipeline.md
backend/docs/reports/: PHASE3_COMPLETION_SUMMARY.md
backend/docs/runbooks/: troubleshooting_common_scenarios.md  troubleshooting_common_scenarios.md.emoji_backup_20251129_135735.emoji_backup_20251129_141250.emoji_backup_20251129_142039
backend/ops/grafana/: README.md  dsa110-gpu-dashboard.json  dsa110-pipeline-dashboard.json
backend/ops/systemd/: absurd-scheduler.service  absurd-worker.service  contimg-pointing.service  dsa110-stream.service  pipeline-scheduler.service
backend/repomix/: repomix-output.xml
backend/scripts/: README.md  fix_schemas.py  fix_schemas.py.emoji_backup_20251129_135735  fix_schemas.py.emoji_backup_20251129_135735.emoji_backup_20251129_141250  fix_schemas.py.emoji_backup_20251129_135735.emoji_backup_20251129_141250.emoji_backup_20251129_142039  health_check.py  health_check.py.emoji_backup_20251129_135735.emoji_backup_20251129_141250  replace_emojis_with_icons.py  replace_emojis_with_icons.py.emoji_backup_20251129_135735  replace_emojis_with_icons.py.emoji_backup_20251129_135735.emoji_backup_20251129_141250  replace_emojis_with_icons.py.emoji_backup_20251129_135735.emoji_backup_20251129_141250.emoji_backup_20251129_142039
backend/scripts/dev/: fix_schemas.py  render_mermaid_to_svg.py
backend/scripts/ops/: ensure_port.py  health_check.py  migrate.py  reindex_hdf5_groups.py  run_api.py  run_api.sh  run_calibrator_fast_imaging.py  run_streaming_converter.py
backend/scripts/postgres/: init.sql  migrate_sqlite_to_postgres.py
backend/scripts/testing/: benchmark_async_performance.py  benchmark_db_pool.py  resource_limits.py  smoke_test_streaming.py  test_absurd_worker.py  test_api_endpoints.sh  validate_fp32_calibration.py  validate_fp32_calibration_lite.py  validate_fp32_precision_safe.py
backend/src/: .flake8  .gitignore  MANAGING_LARGE_REFACTORING.md  README.md
backend/src/.notifications/: job_1763239334_3059056.status  job_1763239565_3082925.status  job_1763241831_3348638.status  job_1763242060_3377778.status  job_1763242223_3397752.status  job_1763243022_3494511.status
backend/src/dsa110_contimg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/tests/: MOCK_AUDIT.md  README.md  __init__.py  conftest.py  pytest.ini.backup  smoke_test_phase1.py  smoke_test_phase2.py  test_gsm_generation.py  test_mermaid_debug.html  test_smoke.py
backend/tests/contract/: __init__.py  (+11 more)
bindings/everybeam_py/: CMakeLists.txt  README.md  pyproject.toml
(+9676 files in other folders)
