[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa110_contimg"
version = "0.1.0"
description = "DSA-110 Continuum Imaging Pipeline"
authors = [
    {name = "DSA-110 Team", email = "dsa110@caltech.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pyuvdata==3.2.4",
    "numpy",
    "astropy",
    "pyuvsim",
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "black",
    "flake8",
]

[project.scripts]
dsa110-cli = "dsa110_contimg.conversion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Filter warnings from third-party packages we can't control
filterwarnings = [
    # Ignore pkg_resources deprecation warnings from casaconfig (CASA dependency)
    # This is a known issue in CASA 6.x that will be fixed in a future release
    "ignore:pkg_resources is deprecated as an API:UserWarning",
    # Ignore setuptools deprecation warnings from any source
    "ignore:.*pkg_resources.*:DeprecationWarning",
    # Ignore NumPy reload warning from astropy (occurs when CASA imports numpy separately)
    "ignore:The NumPy module was reloaded:UserWarning",
]
