[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa110_contimg"
version = "0.1.0"
description = "DSA-110 Continuum Imaging Pipeline"
authors = [
    {name = "Jakob T. Faber", email = "jfaber@caltech.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pyuvdata==3.2.4",
    "numpy",
    "astropy",
    "pyuvsim",
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "aiosqlite>=0.19.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-xdist",
    "httpx",
    "black",
    "flake8",
]

[project.scripts]
dsa110-cli = "dsa110_contimg.conversion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "contract: marks tests as contract tests using real data",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_default_fixture_loop_scope = "function"
# Filter warnings from third-party packages we can't control
filterwarnings = [
    # Ignore pkg_resources deprecation warnings from casaconfig (CASA dependency)
    # This is a known issue in CASA 6.x that will be fixed in a future release
    "ignore:pkg_resources is deprecated as an API:UserWarning",
    # Ignore setuptools deprecation warnings from any source
    "ignore:.*pkg_resources.*:DeprecationWarning",
    # Ignore NumPy reload warning from astropy (occurs when CASA imports numpy separately)
    "ignore:The NumPy module was reloaded:UserWarning",
    # Ignore importlib.resources.is_resource deprecation from casaconfig
    # casaconfig uses legacy API that will be updated in future CASA releases
    "ignore:is_resource is deprecated:DeprecationWarning",
    # Ignore astropy indent deprecation (internal to astropy FITS handling)
    "ignore:The indent function is deprecated:astropy.utils.exceptions.AstropyDeprecationWarning",
    # Ignore FITS header validation warnings in truncated file tests
    "ignore:Error validating header for HDU:astropy.io.fits.verify.VerifyWarning",
    # Ignore unawaited coroutine warnings from logging during async exception tests
    "ignore:coroutine 'open_connection' was never awaited:RuntimeWarning",
]

# Test timeout configuration
timeout = 30  # Default 30s per test
timeout_method = "thread"

# Recommended test commands (for reference):
# Fast unit tests:     pytest tests/unit/ -q
# Contract tests:      pytest tests/contract/ -q  
# Parallel execution:  pytest tests/unit/ -n 4 -q
# Full suite:          pytest tests/unit/ tests/contract/ --ignore=tests/integration/
